# dtr-repro

./: .gitignore  paper.md  pyproject.toml
configs/: base.yaml
configs/experiments/: appendix_a.yaml  appendix_c.yaml  figure4.yaml  table1.yaml  table2.yaml  table3.yaml
docs/: distance_metrics.md
notebooks/: 01_data_exploration.ipynb  02_jsd_heatmap.ipynb  03_correlation_analysis.ipynb  04_hyperparam_sensitivity.ipynb  05_think_at_n.ipynb  06_prefix_ablation.ipynb  07_appendix_distances.ipynb  08_appendix_think_analysis.ipynb
scripts/: compute_metrics.py  download_data.py  download_models.py  generate_responses.py  run_experiment.py
slurm/: array_job_template.sbatch  download_all.sh  generate_deepseek_70b.sbatch  generate_qwen3_30b.sbatch  generate_qwen3_4b.sbatch  setup_env.sh  submit_all.sh
src/dtr/: __init__.py
src/dtr/aggregation/: __init__.py  cost.py  strategies.py
src/dtr/analysis/: __init__.py  correlation.py  sensitivity.py
src/dtr/data/: __init__.py  answer_extraction.py  loaders.py  prompts.py
src/dtr/generation/: __init__.py  hidden_state_generator.py  model_loader.py  sampling.py
src/dtr/metrics/: __init__.py  baselines.py  distances.py  dtr.py
tests/: conftest.py
tests/test_aggregation/: test_cost.py  test_strategies.py
tests/test_analysis/: test_correlation.py  test_sensitivity.py
tests/test_data/: test_answer_extraction.py  test_loaders.py
tests/test_generation/: test_hidden_state_generator.py
tests/test_metrics/: test_baselines.py  test_distances.py  test_dtr.py  test_new_distances.py  test_new_dtr.py
(+4 files in other folders)
