[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtr"
version = "0.1.0"
description = "Deep-Thinking Ratio (DTR) metric and Think@n strategy - reproduction of arXiv 2602.13517"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "transformers>=4.51",
    "accelerate>=0.27",
    "datasets>=2.18",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
